@@ -1,32 +1,18 @@
-/*
- * This file was generated by the Gradle 'init' task.
- *
- * This generated file contains a sample Java application project to get you started.
- * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.3-rc-1/userguide/building_java_projects.html in the Gradle documentation.
- */
-
 plugins {
     id 'java'
-    id 'application'
-    id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
+
+group = 'nro.server'
+version = 'unspecified'
 
 repositories {
     mavenCentral()
 }
 
-shadowJar {
-    archiveBaseName.set('game-server')
-    archiveClassifier.set('all')
-    archiveVersion.set('1.0')
-}
-
 dependencies {
-    // lib folder
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     implementation project(':commons')
 
-    // lib maven
     implementation("org.reflections:reflections:0.10.2")
     implementation("com.googlecode.json-simple:json-simple:1.1.1")
     implementation("org.json:json:20250107")
@@ -36,51 +22,14 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
     implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
     implementation("com.lmax:disruptor:4.0.0")
-
-    // scrip
-//    implementation("org.luaj:luaj-jse:3.0.1")
-
-    // test
+    implementation("com.mysql:mysql-connector-j:9.2.0")
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
+
+    testImplementation platform('org.junit:junit-bom:5.10.0')
+    testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
-jar {
-    manifest {
-        attributes(
-                'Main-Class': 'nro.server.DragonBall'
-        )
-    }
-}
-
-java {
-    toolchain {
-        languageVersion.set(JavaLanguageVersion.of(21))
-    }
-}
-
-application {
-    // Define the main class for the application.
-    mainClass = 'nro.server.DragonBall'
-}
-
-tasks.withType(JavaCompile).configureEach {
-    options.compilerArgs += ["--enable-preview", "-Xlint:-preview"]
-    options.encoding = 'UTF-8'
-}
-
-tasks.withType(JavaExec).configureEach {
-    jvmArgs += "--enable-preview"
-}
-
-tasks.withType(Test).configureEach {
-    jvmArgs += "--enable-preview"
-}
-
-tasks.named('test') {
+test {
     useJUnitPlatform()
 }
-
-//tasks.processResources {
-//    enabled = true
-//}
